implement Feed and cookie login through auth folder

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -6,7 +6,7 @@
    </system.web>
    <system.webServer>
       <staticContent>
-        <mimeMap fileExtension=".rdp" mimeType="application/rdp" />
+        <mimeMap fileExtension=".rdp" mimeType="application/x-rdp" />
       </staticContent>
    </system.webServer>
 </configuration>
