feat: add frontend that follows the style of WinUI 3 and offers a design/layout similar to the Windows App.
Features: favorites, desktops list with wallpaper for each desktop, apps list sorted by folders, choosing between terminal servers when an app is available on multiple, favorites (with importing and exporting), simple view (similar to the old frontend), automatic dark mode, folder flattening, sign out button, splash screen while loading, stale while revalidate.

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
    <system.web>
       <compilation defaultLanguage="C#" targetFramework="4.0">
@@ -6,7 +6,10 @@
    </system.web>
    <system.webServer>
       <staticContent>
-        <mimeMap fileExtension=".rdp" mimeType="application/x-rdp" />
+         <mimeMap fileExtension=".rdp" mimeType="application/x-rdp" />
+         <mimeMap fileExtension=".vue" mimeType="application/javascript" />
+         <mimeMap fileExtension=".mjs" mimeType="application/javascript" />
+         <mimeMap fileExtension=".webp" mimeType="image/webp" />
       </staticContent>
    </system.webServer>
 </configuration>
