feat: add sort, view, and search options on each page of sevices and/or apps

--- a/aspx/wwwroot/app/tsconfig.json
+++ b/aspx/wwwroot/app/tsconfig.json
@@ -8,6 +8,7 @@
       "$components": ["./lib/components/index.mjs"],
       "$components/MenuFlyout": ["./lib/components/MenuFlyout/index.mjs"],
       "$components/*": ["./lib/components/*"],
+      "$icons": ["./lib/assets/icons.ts"],
       "$utils": ["./lib/utils/index.mjs"],
       "$utils/*": ["./lib/utils/*"]
     },
