feat!: replace old frontend with new frontend

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
    <appSettings>
-      <add key="TerminalServerAliases" value="WIN-SGPBICA0161=Win-RemoteApp; FU200098=Workstation; testbox= TEST; FUR-7933Z23.fu.campus=FU200098" />
-      <add key="App.CombineTerminalServersModeEnabled" value="true" />
-      <!-- <add key="App.FavoritesEnabled" value="false" /> -->
+      <!-- <add key="TerminalServerAliases" value="WIN-SGPBICA0161=RAWeb; WIN-UWNSFPV3253=Workstation;" /> -->
+      <!-- <add key="App.CombineTerminalServersModeEnabled" value="true" /> -->
+      <!-- <add key="App.FavoritesEnabled" value="true" /> -->
       <!-- <add key="App.FlatModeEnabled" value="false" /> -->
-      <!-- <add key="App.IconBackgroundsEnabled" value="false" /> -->
+      <!-- <add key="App.IconBackgroundsEnabled" value="true" /> -->
       <!-- <add key="App.SimpleModeEnabled" value="false" /> -->
    </appSettings>
    <system.web>
