--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ aspx/wwwroot/resources/**
 !aspx/wwwroot/resources/testapp.ico
 !aspx/wwwroot/resources/testapp.rdp
 
-# ignore the app folder in wwwroot
-aspx/wwwroot/app/
+# ignore the bundled frontend files
+aspx/wwwroot/lib/assets/
+aspx/wwwroot/lib/winui.css
+aspx/wwwroot/service-worker.js
+aspx/wwwroot/manifest.aspx
