chore: ignore `build.timestamp`

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ aspx/wwwroot/lib/assets/
 aspx/wwwroot/lib/winui.css
 aspx/wwwroot/service-worker.js
 aspx/wwwroot/manifest.aspx
+aspx/wwwroot/lib/build.timestamp
