--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -178,7 +178,7 @@ jobs:
               & ([scriptblock]::Create((irm https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/install.ps1))) -AcceptAll
               ```
 
-              If RAWeb is already installed, **installing with this option will replace the existing configuration and installed files.** You may lose your `/resources` and `/multiuser-resources` folders with this option.
+              If RAWeb is already installed, **installing with this option will replace the existing configuration and installed files.** Resources in `/resources` and `/multiuser-resources` folders will be preserved.
 
               ### Verbose installation
 
