Add i18n, including translations for common english variants

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ aspx/wwwroot/lib/winui.css
 aspx/wwwroot/service-worker.js
 aspx/wwwroot/manifest.aspx
 aspx/wwwroot/lib/build.timestamp
+aspx/wwwroot/locales/
