--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -12,6 +12,7 @@
       <compilation defaultLanguage="C#" targetFramework="4.0">
       </compilation>
       <customErrors mode="Off" />
+      <globalization culture="auto" uiCulture="auto" />
    </system.web>
    <system.webServer>
       <staticContent>
@@ -20,15 +21,15 @@
          <mimeMap fileExtension=".mjs" mimeType="application/javascript" />
          <mimeMap fileExtension=".webp" mimeType="image/webp" />
       </staticContent>
-        <caching>
-            <profiles>
-                <add extension=".aspx" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".mjs" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".rdp" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".ts" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".vue" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-            </profiles>
-        </caching>
+      <caching>
+         <profiles>
+            <add extension=".aspx" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".mjs" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".rdp" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".ts" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".vue" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+         </profiles>
+      </caching>
    </system.webServer>
 </configuration>
