--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "devalue": "^5.1.1",
+    "i18next": "^25.2.1",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-vue": "^5.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
