feat: include RemoteApps located in the registry with ShowInTSWA=1 in the webfeed

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -7,6 +7,8 @@
       <!-- <add key="App.FlatModeEnabled" value="false" /> -->
       <!-- <add key="App.IconBackgroundsEnabled" value="true" /> -->
       <!-- <add key="App.SimpleModeEnabled" value="false" /> -->
+      <add key="RegistryApps.Enabled" value="true" />
+      <!-- <add key="RegistryApps.FullAddressOverride" value="example.com:13389" /> -->
    </appSettings>
    <system.web>
       <compilation defaultLanguage="C#" targetFramework="4.0">
@@ -20,15 +22,15 @@
          <mimeMap fileExtension=".mjs" mimeType="application/javascript" />
          <mimeMap fileExtension=".webp" mimeType="image/webp" />
       </staticContent>
-        <caching>
-            <profiles>
-                <add extension=".aspx" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".mjs" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".rdp" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".ts" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-                <add extension=".vue" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
-            </profiles>
-        </caching>
+      <caching>
+         <profiles>
+            <add extension=".aspx" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".mjs" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".rdp" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".ts" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+            <add extension=".vue" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
+         </profiles>
+      </caching>
    </system.webServer>
 </configuration>
