--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -9,6 +9,7 @@
       <!-- <add key="App.SimpleModeEnabled" value="false" /> -->
       <add key="RegistryApps.Enabled" value="true" />
       <!-- <add key="RegistryApps.FullAddressOverride" value="example.com:13389" /> -->
+      <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
    </appSettings>
    <system.web>
       <compilation defaultLanguage="C#" targetFramework="4.0">
