feat: add app settings/policies

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
    <appSettings>
-      <!-- <add key="TerminalServerAliases" value="WIN-SGPBICA0161=RAWeb; WIN-UWNSFPV3253=Workstation;" /> -->
-      <!-- <add key="App.CombineTerminalServersModeEnabled" value="true" /> -->
-      <!-- <add key="App.FavoritesEnabled" value="true" /> -->
-      <!-- <add key="App.FlatModeEnabled" value="false" /> -->
-      <!-- <add key="App.IconBackgroundsEnabled" value="true" /> -->
-      <!-- <add key="App.SimpleModeEnabled" value="false" /> -->
       <add key="RegistryApps.Enabled" value="true" />
-      <!-- <add key="RegistryApps.FullAddressOverride" value="example.com:13389" /> -->
       <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
    </appSettings>
    <system.web>
@@ -16,6 +9,12 @@
       </compilation>
       <customErrors mode="Off" />
       <globalization culture="auto" uiCulture="auto" />
+      <webServices>
+         <protocols>
+            <add name="HttpGet"/>
+            <add name="HttpPost"/>
+         </protocols>
+    </webServices>
    </system.web>
    <system.webServer>
       <staticContent>
