docs: update readme and release notes with latest notice about what is preserved when upgrading or reinstalling RAWeb

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -197,7 +197,7 @@ jobs:
               & ([scriptblock]::Create((irm https://github.com/${{ github.repository }}/releases/download/${{ steps.version.outputs.version }}/install.ps1))) -AcceptAll
               ```
 
-              If RAWeb is already installed, **installing with this option will replace the existing configuration and installed files.** Resources in `/resources` and `/multiuser-resources` folders will be preserved.
+              If RAWeb is already installed, **installing with this option will replace the existing installed files.** Resources, policies, and other data in `/App_Data` with be preserved.
 
               ### Verbose installation
 
