feat: add a cache for user information, which enables login when the domain controller is unavailable (similar to Windows)
Username, full name, domain, user sid, and group names and sids are stored in a sqlite database in the App_Data folder. The RAWeb installer only grants read and write access to the App_Data folder for the raweb application pool; all other users/accounts are denied any access.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # ignore files in resources and multiuser-resources folders
-aspx/wwwroot/App_Data/multiuser-resources/**
-aspx/wwwroot/App_Data/resources/**
+aspx/wwwroot/App_Data/**
 !aspx/wwwroot/App_Data/multiuser-resources/group/readme.txt
 !aspx/wwwroot/App_Data/multiuser-resources/user/readme.txt
 !aspx/wwwroot/App_Data/resources/testapp.ico
