feat: add a policy for controlling whether password change is enabled (defaults to enabled)

--- a/aspx/wwwroot/App_Data/appSettings.config
+++ b/aspx/wwwroot/App_Data/appSettings.config
@@ -2,4 +2,5 @@
 <appSettings>
   <add key="RegistryApps.Enabled" value="true" />
   <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
+  <add key="PasswordChange.Enabled" value="false" />
 </appSettings>
