refactor: generate complete html with vite instead of pre-creating individual aspx files with AppRoot.ascx

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ aspx/wwwroot/service-worker.js
 aspx/wwwroot/manifest.aspx
 aspx/wwwroot/lib/build.timestamp
 aspx/wwwroot/locales/
+aspx/wwwroot/*.html
