--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -30,5 +30,15 @@
             <add extension=".vue" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00:00:01" />
          </profiles>
       </caching>
+      <defaultDocument enabled="true">
+         <files>
+            <clear />
+            <add value="index.html" />
+         </files>
+      </defaultDocument>
+      <modules>
+         <!-- use custom logic for serving html files (we inject some strings) -->
+         <add name="InterceptHtml" type="InterceptHtml" />
+      </modules>
    </system.webServer>
 </configuration>
