--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -19,6 +19,7 @@
          <mimeMap fileExtension=".vue" mimeType="application/javascript" />
          <mimeMap fileExtension=".mjs" mimeType="application/javascript" />
          <mimeMap fileExtension=".webp" mimeType="image/webp" />
+         <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
       </staticContent>
       <caching>
          <profiles>
