--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -21,7 +21,7 @@
          <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
       </staticContent>
       <handlers>
-         <add name="AllowRdpFileRequestsToReachApi" path="*.rdp" verb="GET" type="System.Web.Handlers.TransferRequestHandler" />
+         <add name="AllowAllRequestsToReachApi" path="api/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" />
       </handlers>
       <caching>
          <profiles>
