chore: support `vite dev` for the web app, which will make it easier to work on the web app

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite dev",
+    "build:watch": "vite build --watch",
     "build": "vite build"
   },
   "type": "module",
