--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -2,7 +2,12 @@
 <configuration>
    <appSettings configSource="App_Data\appSettings.config" />
    <system.web>
-      <compilation defaultLanguage="C#" targetFramework="4.0">
+      <compilation defaultLanguage="C#" targetFramework="4.5">
+         <assemblies>
+            <add assembly="System.DirectoryServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+            <add assembly="System.DirectoryServices.AccountManagement, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+            <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+         </assemblies>
       </compilation>
       <customErrors mode="Off" />
       <globalization culture="auto" uiCulture="auto" />
