--- a/aspx/wwwroot/App_Data/appSettings.config
+++ b/aspx/wwwroot/App_Data/appSettings.config
@@ -2,4 +2,5 @@
 <appSettings>
   <add key="RegistryApps.Enabled" value="true" />
   <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
+  <add key="UserCache.Enabled" value="true" />
 </appSettings>
