chore: clean up namespaces

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -46,8 +46,8 @@
       </defaultDocument>
       <modules>
          <!-- use custom logic for serving html files (we inject some strings) -->
-         <add name="InterceptHtml" type="InterceptHtml" />
-         <add name="AuthUserStaleWhileRevalidate" type="AuthUserStaleWhileRevalidate" preCondition="managedHandler" />
+         <add name="InterceptHtml" type="RAWebServer.Modules.InterceptHtml" />
+         <add name="AuthUserStaleWhileRevalidate" type="RAWebServer.Modules.AuthUserStaleWhileRevalidate" preCondition="managedHandler" />
       </modules>
    </system.webServer>
 </configuration>
