--- a/aspx/wwwroot/App_Data/appSettings.config
+++ b/aspx/wwwroot/App_Data/appSettings.config
@@ -1,6 +1,7 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <appSettings>
   <add key="RegistryApps.Enabled" value="true" />
   <add key="RegistryApps.AdditionalProperties" value="drivestoredirect:s:*;redirectclipboard:i:1" />
   <add key="UserCache.Enabled" value="true" />
+  <add key="App.Auth.Anonymous" value="always" />
 </appSettings>
