feat: add documentation app
Links still need to be cleaned up in the markdown. Screenshots still need to be copied over.

--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -24,6 +24,7 @@
          <mimeMap fileExtension=".mjs" mimeType="application/javascript" />
          <mimeMap fileExtension=".webp" mimeType="image/webp" />
          <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+         <mimeMap fileExtension=".md" mimeType="text/markdown" />
       </staticContent>
       <handlers>
          <add name="AllowAllRequestsToReachApi" path="api/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" />
