feat: use proper links between each docs page and within docs pages that do not cause the window to reload

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -3,5 +3,10 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.organizeImports": "explicit"
+  },
+  "[markdown]": {
+    "editor.wordWrap": "bounded",
+    "editor.wordWrapColumn": 120,
+    "editor.defaultFormatter": "yzhang.markdown-all-in-one",
   }
 }
