--- a/aspx/wwwroot/Web.config
+++ b/aspx/wwwroot/Web.config
@@ -7,16 +7,11 @@
             <add assembly="System.DirectoryServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
             <add assembly="System.DirectoryServices.AccountManagement, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
             <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+            <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
          </assemblies>
       </compilation>
       <customErrors mode="Off" />
       <globalization culture="auto" uiCulture="auto" />
-      <webServices>
-         <protocols>
-            <add name="HttpGet" />
-            <add name="HttpPost" />
-         </protocols>
-      </webServices>
    </system.web>
    <system.webServer>
       <staticContent>
@@ -27,7 +22,7 @@
          <mimeMap fileExtension=".md" mimeType="text/markdown" />
       </staticContent>
       <handlers>
-         <add name="AllowAllRequestsToReachApi" path="api/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" />
+         <add name="AllowAllRequestsToReachApi" path="api/*" verb="*" type="System.Web.Handlers.TransferRequestHandler" />
       </handlers>
       <caching>
          <profiles>
