feat: run privileged actions from `SystemRemoteApps` in a separate service
This change includes extracitng the service to a separate project, create an additional service rpoject for creating the windows service, creating connections between the web api and the service, and modifying the install process to build the projects in unison and install the service

--- a/aspx/wwwroot/RAWebServer.csproj
+++ b/aspx/wwwroot/RAWebServer.csproj
@@ -7,6 +7,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <UseAppHost>false</UseAppHost>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -15,16 +17,18 @@
     <Version>1.0.0.0</Version>
     <FileVersion>1.0.0.0</FileVersion>
     <Company>RAWeb</Company>
-
-    <!-- We manually provide AssemblyInfo.cs. -->
-    <!-- The info above will not be used. -->
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>build\bin\</OutputPath>
   </PropertyGroup>
+
+  <!-- ensure that the frontend has been built  -->
+  <Target Name="RunCustomBuild" BeforeTargets="Build">
+    <MSBuild Projects="..\..\frontend\build.proj" Targets="Build"
+      Condition="!Exists('lib\build.timestamp')" />
+  </Target>
 
   <ItemGroup>
     <Reference Include="System" />
@@ -58,6 +62,13 @@
       <HintPath>bin\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ServiceModel" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\dotnet\RAWeb.Server.Management\RAWeb.Server.Management.csproj" />
+    <ProjectReference
+      Include="..\..\dotnet\RAWeb.Server.Management.ServiceHost\RAWeb.Server.Management.ServiceHost.csproj" />
   </ItemGroup>
 
   <!--  force these dll files to be included in the output -->
@@ -91,7 +102,7 @@
       Condition="!Exists('$(ParentOfOutput)App_Data\appSettings.config')" />
 
     <Copy
-      SourceFiles="lib\assets\default.ico;lib/assets/wallpaper.png;lib/assets/wallpaper-dark.png;lib/assets/desktop-frame.png"
+      SourceFiles="../../frontend/lib/assets/default.ico;../../frontend/lib/assets/wallpaper.png;../../frontend/lib/assets/wallpaper-dark.png;../../frontend/lib/assets/desktop-frame.png"
       DestinationFolder="$(ParentOfOutput)\lib\assets\"
       SkipUnchangedFiles="true" />
   </Target>
