--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 # Default settings:
 # A newline ending every file
 # Use 4 spaces as indentation
-[*]
+[*.{cs,csproj}]
 insert_final_newline = true
 indent_style = space
 indent_size = 4
