--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
 
     steps:
       - name: Checkout code
@@ -46,7 +48,8 @@ jobs:
           echo "Using version $new_version"
           echo "version=$new_version" >> $GITHUB_OUTPUT
 
-      - name: Update AssemblyInfo.cs
+      - name: Clean version string
+        id: clean_version
         run: |
           VERSION="${{ steps.version.outputs.version }}"
 
@@ -62,8 +65,30 @@ jobs:
           done
           CLEAN_VERSION=${CLEAN_VERSION%.} # remove trailing dot
 
-          echo "Setting AssemblyVersion to $CLEAN_VERSION"
-          sed -i -E "s/^(\[assembly: AssemblyFileVersion\(\")[0-9\.]+(\"\)\])/\1$CLEAN_VERSION\2/" aspx/wwwroot/App_Code/AssemblyInfo.cs
+          echo "CLEAN_VERSION=$CLEAN_VERSION" >> $GITHUB_OUTPUT
+          echo "Setting FileVersion to $CLEAN_VERSION"
+
+      - name: "Update .csproj FileVersion"
+        if: success()
+        run: |
+          CLEAN_VERSION="${{ steps.clean_version.outputs.CLEAN_VERSION }}"
+
+          CSPROJ_FILES=(
+            "aspx/wwwroot/RAWebServer.csproj"
+            "dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj"
+            "dotnet/RAWeb.Server.Management.ServiceHost/RAWeb.Server.Management.ServiceHost.csproj"
+          )
+
+          # loop through each file path
+          for CSPROJ_FILE in "${CSPROJ_FILES[@]}"; do            
+            echo "Updating FileVersion in $CSPROJ_FILE to $CLEAN_VERSION"
+            sed -i -E "s|(<FileVersion>)[0-9\.]+(</FileVersion>)|\1$CLEAN_VERSION\2|g" "$CSPROJ_FILE"
+            
+            # check if the sed command actually modified the file
+            if [ $? -ne 0 ]; then
+              echo "Warning: Failed to update or find <FileVersion> tag in $CSPROJ_FILE."
+            fi
+          done
 
       - name: Move repository setup.ps1 to aspx/wwwroot so it is included in the release archive
         run: |
@@ -99,6 +124,24 @@ jobs:
 
       - name: Build the frontend
         run: cd frontend && pnpm run build
+
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "8.0.x"
+          cache: true
+
+      - name: Restore .NET solution
+        run: dotnet restore RAWeb.sln --locked-mode
+
+      - name: Build .NET solution
+        run: dotnet build RAWeb.sln --configuration Release --no-restore
+
+      - name: Replace App_Code and bin directories with build output
+        run: |
+          rm -rf aspx/wwwroot/App_Code
+          rm -rf aspx/wwwroot/bin
+          cp -r aspx/wwwroot/build/bin aspx/wwwroot/bin
 
       - name: Generate archive
         uses: thedoctor0/zip-release@0.7.5
