feat: include packaged apps in the list of available apps

--- a/dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj
+++ b/dotnet/RAWeb.Server.Management/RAWeb.Server.Management.csproj
@@ -38,6 +38,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <Reference Include="PriFormat" />
+    <PackageReference Include="System.ValueTuple" Version="4.6.1" />
   </ItemGroup>
 
 </Project>
